hard-gists/5478642/run.log
=== Docker Run Log for 5478642 ===
Started at: Mi 29. Okt 15:43:14 CET 2025

[2025-10-29 15:43:15] START: Running container for 5478642
[2025-10-29 15:43:15] SUCCESS: Container 660c1a996a0a72142c39f32bb8f9520352a47f00e4e8caf9f80a0eb631c4b563 started for 5478642
=== Container logs for 5478642 ===
  File "/snippet.py", line 66
    print "Base gain: " + str(float(tg)/N)
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 5478642 ===
[2025-10-29 15:43:17] INFO: Container 660c1a996a0a72142c39f32bb8f9520352a47f00e4e8caf9f80a0eb631c4b563 has stopped
